--- a/WebSudoku/wwwroot/Resources/Pages/PrintMultiple.pl-PL.resx
+++ b/WebSudoku/wwwroot/Resources/Pages/PrintMultiple.pl-PL.resx
@@ -138,4 +138,13 @@
   <data name="sudoku(s)" xml:space="preserve">
     <value>sudoku</value>
   </data>
+  <data name="Generating additional sudokus..." xml:space="preserve">
+    <value>Przygotowuję dodatkowe sudoku...</value>
+  </data>
+  <data name="Remove board" xml:space="preserve">
+    <value>Usuń sudoku</value>
+  </data>
+  <data name="Regenerate board" xml:space="preserve">
+    <value>Generuj ponownie</value>
+  </data>
 </root>
