--- a/Resources/Layout/NavMenu.resx
+++ b/Resources/Layout/NavMenu.resx
@@ -120,8 +120,8 @@
   <data name="Sudoku Rules" xml:space="preserve">
     <value>Sudoku Rules</value>
   </data>
-  <data name="Print multiple" xml:space="preserve">
-    <value>Print multiple</value>
+  <data name="Print Multiple" xml:space="preserve">
+    <value>Print Multiple</value>
   </data>
   <data name="Code" xml:space="preserve">
     <value>Code</value>
