--- a/Resources/Layout/NavMenu.pl-PL.resx
+++ b/Resources/Layout/NavMenu.pl-PL.resx
@@ -120,7 +120,7 @@
   <data name="Sudoku Rules" xml:space="preserve">
     <value>Reguły sudoku</value>
   </data>
-  <data name="Print multiple" xml:space="preserve">
+  <data name="Print Multiple" xml:space="preserve">
     <value>Drukuj wiele</value>
   </data>
   <data name="Code" xml:space="preserve">
