--- a/WebSudoku/ResxResources/Pages/PrintMultiple.pl-PL.resx
+++ b/WebSudoku/ResxResources/Pages/PrintMultiple.pl-PL.resx
@@ -147,4 +147,13 @@
   <data name="Regenerate board" xml:space="preserve">
     <value>Generuj ponownie</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Anuluj</value>
+  </data>
+  <data name="Use more resources" xml:space="preserve">
+    <value>Użyj więcej zasobów</value>
+  </data>
+  <data name="Speeds up the process but" xml:space="preserve">
+    <value>Przyspiesza proces ale zmniejsza responsywność.</value>
+  </data>
 </root>
