Add Settings page
Update translations

--- a/WebSudoku/ResxResources/Layout/NavMenu.resx
+++ b/WebSudoku/ResxResources/Layout/NavMenu.resx
@@ -126,4 +126,7 @@
   <data name="Code" xml:space="preserve">
     <value>Code</value>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Settings</value>
+  </data>
 </root>
