Use settings for PrintMultiple page
Update Index page

Add Settings button on the Index page

--- a/WebSudoku/ResxResources/Pages/Index.pl-PL.resx
+++ b/WebSudoku/ResxResources/Pages/Index.pl-PL.resx
@@ -243,4 +243,7 @@
   <data name="Target cell will have its value selected." xml:space="preserve">
     <value>Wartość docelowej komórki zostanie zaznaczona.</value>
   </data>
+  <data name="Manage settings" xml:space="preserve">
+    <value>Zarządzaj ustawieniami</value>
+  </data>
 </root>
