--- a/WebSudoku/ResxResources/Pages/Index.resx
+++ b/WebSudoku/ResxResources/Pages/Index.resx
@@ -261,4 +261,7 @@
   <data name="Maximum attempts to blank next cell" xml:space="preserve">
     <value>Maximum attempts to blank next cell. Increasing this parameter slightly extends sudoku generation time and increases frequency of generated sudokus with desired amount of empty cells.</value>
   </data>
+  <data name="The following sudoku generation settings can be adjusted" xml:space="preserve">
+    <value>The following sudoku generation settings can be adjusted</value>
+  </data>
 </root>
